# abyss-explorer

./: .env.example  .gitignore  BONUS_ASSETS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  FINAL_NOTES.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  README.md  REPO_ASSEMBLY.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  index.html  manifest.json  package.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  documents.py  system.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/ingestion/: __init__.py
backend/app/ingestion/extractors/: __init__.py
backend/app/ingestion/integrations/: __init__.py
backend/app/ingestion/parsers/: __init__.py
backend/app/models/: __init__.py  attachment.py  base.py  collection.py  document.py  job.py  link.py  tag.py  user.py
backend/app/schemas/: __init__.py  common.py  document.py  user.py
backend/app/services/: auth_service.py  document_service.py
backend/app/tasks/: __init__.py
backend/tests/: conftest.py
css/: animations.css  controls.css  main.css  ui.css
docs/: API.md  COLORING_ALGORITHMS.md  CONTRIBUTING.md  MATHEMATICS.md  PERTURBATION_THEORY.md  README.md  SERIES_APPROXIMATION.md  SHADER_REFERENCE.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
js/: config.js  main.js
nginx/: nginx.conf
scripts/: backup.sh  (+2 more)
(+148 files in other folders)
